--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ font-family: 'Tiro Gurmukhi', serif;*/
 }
 
 body, html{
-    background-color: white;
+    background-color: #F6F3F3;
     margin:0;
     padding:0;
     border:0;
@@ -23,7 +23,7 @@ h1{
 }
 
 h2{
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Tiro Gurmukhi', serif;
     letter-spacing: 3px;
     color: #25261C;
     margin: auto;
@@ -47,21 +47,14 @@ p{
     margin-top: 15px;
 }
 
-nav{
-    margin: 0;
-    padding: 0;
-}
-
-
 a{
     text-decoration: none;
     text-transform: capitalize;
     color: #25261C;
 }
 
-a:hover {
-    text-decoration: none;
-}
+
+/*banner*/
 
 .two-col {
     position: relative;
@@ -72,16 +65,19 @@ a:hover {
 .col {
     position: relative;
     width: 100%;
+    height: 100vh;
 }
-/*banner*/
-
-.col 100vh {
-     height: 100vh;
-        }
 
 .home-hero {
 
 }
+
+.flex-cc{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 
 .home-hero img {
     position: absolute;
@@ -132,13 +128,6 @@ input[type=submit]:hover {
     position: relative;
 }
 
-
-
-.fr{
-    right: 0;
-}
-
-
 .grid {
     display: grid;
     grid-gap: 10px;
@@ -147,4 +136,111 @@ input[type=submit]:hover {
 
 .grid>* {
     height: 200px;
+}
+
+/*navbar*/
+.navbar{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding-top: 10px;
+    z-index: 9999;
+    background-color: #f6f3f3;
+}
+
+.navbar__container{
+    display: flex;
+    padding: 0 30px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    height: 60px;
+}
+
+.navbar__menu{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: stretch;
+}
+
+.navbar__menu--left {
+    margin-right: auto;
+}
+
+.navbar__menu--right {
+    margin-left: auto;
+}
+
+.navbar__menu li {
+    margin: 0;
+    font-size: 1.6rem;
+    line-height: 1.6rem;
+    display: flex;
+    align-items: center;
+}
+
+.navbar__menu li a {
+    color: #54506B;
+    text-decoration: none;
+    font-size: 14px;
+    cursor: pointer;
+    user-select: none;
+    padding: 0 10px;
+    margin: 0 3px;
+    position: relative;
+    line-height: 16px;
+    font-family: 'Open Sans', sans-serif
+}
+
+.navbar__menu li a:hover{
+    text-decoration: underline;
+    text-decoration-color: #54506B;
+}
+.menuitem{
+
+}
+
+/*Search bar*/
+
+.boxContainer{
+    display: inline-block;
+    position: relative;
+    width: 300px;
+    height: 42px;
+    border: 4px solid #F4F4F4;
+    padding: 0 10px;
+    border-radius: 50px;
+    background: #F4F4F4;
+}
+
+.elementsContainer{
+    width: 100%;
+    height: 100%;
+    vertical-align:center;
+    background: #F4F4F4;
+}
+
+.search{
+    border: none;
+    height: 100%;
+    width: 100%;
+    padding: 0 5px;
+    border-radius:50px;
+    font-size: 18px;
+    font-family: 'Open Sans', sans-serif;
+    color:#284B63;
+    font-weight:500;
+}
+
+.search:focus{
+    outline:none;
+}
+
+.material-icons-outlined{
+    width: 25px;
+    color: #0092B4;
+    background-color: transparent;
 }
