--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ input[type=submit]:hover {
 }
 
 /*navbar*/
+
 .navbar{
     position: fixed;
     width: 100%;
@@ -196,6 +197,8 @@ input[type=submit]:hover {
     align-items: center;
 }
 
+
+
 .navbar__menu li a {
     color: #54506B;
     text-decoration: none;
@@ -209,12 +212,20 @@ input[type=submit]:hover {
     font-family: 'Open Sans', sans-serif
 }
 
+
+
 .navbar__menu li a:hover{
     text-decoration: underline;
     text-decoration-color: #54506B;
 }
-.menuitem{
 
+.navbar__menu li a:active{
+
+}
+
+.current-page {
+    text-decoration: underline !important;
+    text-decoration-color: #54506B;
 }
 
 /*Search bar*/
@@ -247,7 +258,7 @@ input[type=submit]:hover {
     background-color: transparent;
 }
 
-.search:focus{
+.search__input:focus{
     outline:none;
 }
 
