--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ section {
     padding-top: var(--nav-height);
 }
 
+
 /*banner*/
 
 .two-col {
@@ -135,8 +136,10 @@ input[type=submit]:hover {
 }
 */
 
+/*movie grid*/
+
 #container{
-    width:50%;
+    width:90%;
     margin-left: auto;
     margin-right: auto;
     position: relative;
@@ -150,6 +153,10 @@ input[type=submit]:hover {
 
 .grid>* {
     height: 200px;
+}
+
+.movie-img{
+    width: 100%;
 }
 
 /*navbar*/
@@ -274,4 +281,20 @@ input[type=submit]:hover {
 .flag_img{
     width: 40px;
     height: 30px;
+}
+
+/*movies list grid*/
+
+.page-grid{
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    gap: 10px;
+}
+
+.filters{
+    grid-column: 1;
+}
+
+.main{
+    grid-column: 2;
 }
