--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ font-family: 'Tiro Gurmukhi', serif;*/
 :root {
     --bg-color: #F6F3F3;
     --nav-height: 60px;
+    --page-max-width: 1400px;
 }
 
 body, html{
@@ -32,8 +33,7 @@ h2{
     letter-spacing: 3px;
     color: #25261C;
     margin: auto;
-    padding: 20px;
-    box-sizing: border-box;
+    padding: 10px 0;
 }
 
 h3{
@@ -42,6 +42,7 @@ h3{
     color: #25261C;
     margin: auto;
     width: 98%;
+    font-size: 20px;
 }
 
 p{
@@ -56,6 +57,7 @@ a{
     text-decoration: none;
     text-transform: capitalize;
     color: #25261C;
+    font-family: 'Open Sans', sans-serif;
 }
 
 section {
@@ -64,10 +66,21 @@ section {
     padding: 0;
 }
 
+ul {
+    list-style-type: none;
+}
+
+/*moves content down for navigation*/
 .content {
     padding-top: var(--nav-height);
 }
 
+/*adds padding*/
+.main {
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 30px;
+}
 /*banner*/
 
 .two-col {
@@ -135,8 +148,10 @@ input[type=submit]:hover {
 }
 */
 
+/*movie grid*/
+
 #container{
-    width:50%;
+    width:90%;
     margin-left: auto;
     margin-right: auto;
     position: relative;
@@ -144,14 +159,102 @@ input[type=submit]:hover {
 
 .grid {
     display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(auto-fill, 186px);
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 60px;
 }
 
 .grid>* {
-    height: 200px;
 }
 
+.movie-img{
+    width: 100%;
+    height: 100%;
+}
+
+.rec-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 50px;
+}
+
+/*movies list page*/
+
+.page-grid{
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+}
+
+.filters{
+    grid-column: 1;
+    padding: 14px 16px 16px 16px;
+}
+
+.filter-panel {
+    border: 1px solid #e3e3e3;
+    border-radius: 8px;
+    width: 100%;
+    margin-top: 12px;
+}
+
+.filter-panel-inner{
+    padding: 14px 16px 16px 16px;
+}
+
+.filter li{
+    padding: 5px;
+    border: 1px solid #cbc5d9;
+    border-radius: 10px;
+    display:inline-block;
+    margin-right: 6px;
+    margin-top: 8px;
+    cursor: pointer;
+}
+
+    .filter li:hover{
+        background-color: #cbc5d9;
+    }
+
+    .filter li:active{
+        background-color: #cbc5d9;
+    }
+
+.movies{
+    grid-column: 2;
+    padding: 14px 16px 16px 16px;
+}
+
+/* dropdown style */
+select {
+    background-color: transparent;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 0;
+    width: 100%;
+    font-family: 'Open Sans', sans-serif;
+    font-size: inherit;
+    cursor: inherit;
+    line-height: inherit;
+}
+
+.dropdown {
+    border: 1px solid #cbc5d9;
+    border-radius: 5px;
+    font-size: 13px;
+}
+
+.submit-button{
+    background-color: #cbc5d9;
+    padding: 5px;
+    margin: 10px 0;
+    font-family: 'Open Sans', sans-serif;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 100%;
+}
+
+    .submit-button:hover{
+        -webkit-filter: brightness(90%);
+    }
 /*navbar*/
 
 .navbar{
@@ -274,4 +377,87 @@ input[type=submit]:hover {
 .flag_img{
     width: 40px;
     height: 30px;
+    padding: 3px 0;
+    margin-right: 20px;
 }
+
+.movie-banner{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.movie-column {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.inner-content{
+    display: flex;
+    flex-wrap: nowrap;
+    max-width: var(--page-max-width);
+}
+
+.poster{
+    min-width: 300px;
+    width: 300px;
+    height: 100%;
+    overflow: hidden;
+}
+
+.movie-details {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    align-content: center;
+    box-sizing: border-box;
+    padding-left: 40px;
+}
+
+.movie-title {
+    width: 100%;
+    padding: 0;
+}
+
+.movie-representation{
+    width: 100%;
+    height: 68px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.movie-filters{
+    width: 100%;
+    height: 68px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+@media screen and (max-width: 660px) {
+
+    .grid {
+        grid-template-columns: 1fr;
+    }
+}
+
+
+@media screen and (max-width: 960px) {
+
+    .grid {
+        gap: 50px;
+        padding: 110px 50px 50px;
+    }
+}
+
+@media (max-width: 1080px) {
+
+    .grid {
+        grid-template-columns: 1fr 1fr;
+        padding-top: 130px;
+    }
+}
+
+
+
